# hydownloader-cpp

./: CMakeLists.txt  README.md
include/hydownloader-cpp/: hydownloaderconnection.h  hydownloaderjsonobjectlistmodel.h  hydownloaderlogmodel.h  hydownloadermissedsubscriptionchecksmodel.h  hydownloadersingleurlqueuemodel.h  hydownloadersubscriptionchecksmodel.h
src/: hydownloaderconnection.cpp  hydownloaderconnection.h  hydownloaderjsonobjectlistmodel.cpp  hydownloaderjsonobjectlistmodel.h  hydownloaderlogmodel.cpp  hydownloadermissedsubscriptionchecksmodel.cpp  hydownloadersingleurlqueuemodel.cpp  hydownloadersingleurlqueuemodel.h  hydownloadersubscriptionchecksmodel.cpp  hydownloadersubscriptionchecksmodel.h  hydownloadersubscriptionmodel.cpp  hydownloadersubscriptionmodel.h
